mudanças na arquitetura da aplicação

--- a/css/style.scss
+++ b/css/style.scss
@@ -15,6 +15,8 @@ body {
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
+    padding-bottom: 50%;
+    box-sizing: border-box;
 		img {
 			width: 150px;
 			height: 150px;
