--- a/css/style.scss
+++ b/css/style.scss
@@ -15,7 +15,7 @@ body {
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
-    padding-bottom: 50%;
+    padding-bottom: 30vh;
     box-sizing: border-box;
 		img {
 			width: 150px;
