--- a/template/unidadesView.html
+++ b/template/unidadesView.html
@@ -1,8 +1,8 @@
 <div class="result">
     <div class="topo">
-        <div class="logo"></div>
+        <div class="logo" ui-sref="home"></div>
         <div class="search-bar">
-            <input type="text" class="ms-input search" name="keyword" ng-model="keyword" placeholder="Palavra-chave" required>
+            <input type="text" class="ms-input search" name="keyword" ng-model="unidadeCtrl.keywords" placeholder="Palavra-chave" required>
             <a href="" class="ms-btn" ng-click="c.submitForm()" ng-disabled="searchForm.$invalid">Buscar</a>
         </div>
     </div>
