--- a/css/style.scss
+++ b/css/style.scss
@@ -103,7 +103,7 @@ body {
 		}
 	}
 	.detail {
-		padding-top: 65px;
+		padding-top: 75px;
 		background: #EDF0F1;
 		height: 100%;
 		.topo {
@@ -125,6 +125,49 @@ body {
 			.search-bar {
 				padding: 10px 0;
 				display: inline-block;
+			}
+		}
+		.info {
+			width: 760px;
+			margin: 0 auto;
+			padding: 20px;
+			background: #FFF;
+			border-bottom: 2px solid #E4E4E4;
+			border-radius: 5px;
+			color: #969696;
+			h3, p {
+				margin: 0;
+			}
+			h3 {
+				margin-bottom: 15px;
+				font-size: 16px;
+			}
+			p {
+				font-size: 12px;
+			}
+			.services {
+				h4 {
+					font-size: 14px;
+				}
+				ul {
+					list-style: none;
+					padding: 0;
+					li {
+						display: inline-block;
+						font-size: 9px;
+						padding: 5px 10px;
+						background: #926FB5;
+						color: white;
+						border-radius: 5px;
+						transition: all ease .3s;
+						&:hover {
+							background: darken(#926FB5, 10%);
+						}
+						a {
+							color: #FFF;
+						}
+					}
+				}
 			}
 		}
 	}
