--- a/template/unidadesView.html
+++ b/template/unidadesView.html
@@ -1,6 +1,6 @@
 <div class="result">
     <div class="topo">
-        <div class="logo" ui-sref="home"></div>
+        <a class="logo" ui-sref="home"></a>
         <div class="search-bar">
             <input type="text" class="ms-input search" name="keyword" ng-model="unidadeCtrl.keywords" placeholder="Palavra-chave" required>
             <a href="" class="ms-btn" ng-click="c.submitForm()" ng-disabled="searchForm.$invalid">Buscar</a>
@@ -8,78 +8,25 @@
     </div>
     <div class="search-result">
         <header>
-            <span>Foram encontrados <strong>27</strong> registros.</span>
+            <span>Foram encontrados <strong>{{ unidadeCtrl.establishments.length }}</strong> registros.</span>
             <div class="result-type">
                 <input type="radio" name="result_type" id="type_1" value="lsita" checked><label for="type_1"> Lista</label>
                 <input type="radio" name="result_type" id="type_2" value="mapa"><label for="type_1"> Mapa</label>
             </div>
         </header>
         <div class="content">
-            <a href="#/detalhe" class="card">
+            <a class="card"
+                ui-sref="unidadeDetalhes({
+                    'descricao': (establishment.unidade | slugify),
+                    'bairro': (establishment.obj.endereco.bairro | slugify),
+                    'cidade': (establishment.obj.endereco.nomeMunicipio | slugify),
+                    'uf': (establishment.obj.endereco.estado | slugify)
+                })"
+                ng-repeat="establishment in unidadeCtrl.establishments">
                 <div class="info">
-                    <h3>Nome da Unidade</h3>
+                    <h3>{{ establishment.unidade }}</h3>
                     <p>Serviços: Ortopedia, Nutrição, Exames</p>
-                    <p>Telefone: (71) 3333-3333</p>
-                </div>
-            </a>
-
-            <a href="#/detalhe" class="card">
-                <div class="info">
-                    <h3>Nome da Unidade</h3>
-                    <p>Serviços: Ortopedia, Nutrição, Exames</p>
-                    <p>Telefone: (71) 3333-3333</p>
-                </div>
-            </a>
-
-            <a href="#/detalhe" class="card">
-                <div class="info">
-                    <h3>Nome da Unidade</h3>
-                    <p>Serviços: Ortopedia, Nutrição, Exames</p>
-                    <p>Telefone: (71) 3333-3333</p>
-                </div>
-            </a>
-
-            <a href="#/detalhe" class="card">
-                <div class="info">
-                    <h3>Nome da Unidade</h3>
-                    <p>Serviços: Ortopedia, Nutrição, Exames</p>
-                    <p>Telefone: (71) 3333-3333</p>
-                </div>
-            </a>
-            
-            <a href="#/detalhe" class="card">
-                <div class="info">
-                    <h3>Nome da Unidade</h3>
-                    <p>Serviços: Ortopedia, Nutrição, Exames</p>
-                    <p>Telefone: (71) 3333-3333</p>
-                </div>
-            </a>
-            <a href="#/detalhe" class="card">
-                <div class="info">
-                    <h3>Nome da Unidade</h3>
-                    <p>Serviços: Ortopedia, Nutrição, Exames</p>
-                    <p>Telefone: (71) 3333-3333</p>
-                </div>
-            </a>
-            <a href="#/detalhe" class="card">
-                <div class="info">
-                    <h3>Nome da Unidade</h3>
-                    <p>Serviços: Ortopedia, Nutrição, Exames</p>
-                    <p>Telefone: (71) 3333-3333</p>
-                </div>
-            </a>
-            <a href="#/detalhe" class="card">
-                <div class="info">
-                    <h3>Nome da Unidade</h3>
-                    <p>Serviços: Ortopedia, Nutrição, Exames</p>
-                    <p>Telefone: (71) 3333-3333</p>
-                </div>
-            </a>
-            <a href="#/detalhe" class="card">
-                <div class="info">
-                    <h3>Nome da Unidade</h3>
-                    <p>Serviços: Ortopedia, Nutrição, Exames</p>
-                    <p>Telefone: (71) 3333-3333</p>
+                    <p>Telefone: {{ establishment.obj.nuTelefone }}</p>
                 </div>
             </a>
         </div>
