--- a/template/unidadeDetalhesView.html
+++ b/template/unidadeDetalhesView.html
@@ -11,19 +11,18 @@
             </form>
         </div>
     </div>
-    <div class="info">
-        <h3>Nome da Unidade</h3>
-        <p>Endereço: Av. Psodapsdoa Dsa sdsaos</p>
-        <p>Telefone: (71) 3333-3333</p>
+    <div class="info" ng-if="unidadeDetalheCtrl.establishment">
+        <h3>{{ unidadeDetalheCtrl.establishment.nomeFantasia }}</h3>
+        <p>Endereço: {{ unidadeDetalheCtrl.endereco(unidadeDetalheCtrl.establishment) }}</p>
+        <p>Telefone: {{ unidadeDetalheCtrl.establishment.nuTelefone }}</p>
 
         <div class="services">
-            <h4>Serviços</h4>
+            <h4>Serviços Especializados</h4>
             <ul>
-                <li class="service"><a href="">DIAGNOSTICO POR IMAGEM</a></li>
-                <li class="service"><a href="">DIAGNOSTICO POR LABORATORIO CLINICO</a></li>
-                <li class="service"><a href="">EXAME  ELETROCARDIOGRAFICO</a></li>
-                <li class="service"><a href="">PRONTO ATENDIMENTO PEDIATRICO</a></li>
-                <li class="service"><a href="">ULTRASONOGRAFIA</a></li>
+                <li class="service"
+                    ng-repeat="s in unidadeDetalheCtrl.establishment.servicosEspecializados">
+                    <a href="">{{ s.dsServico }}</a>
+                </li>
             </ul>
         </div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12087.746318586604!2d-71.64614110000001!3d-40.76341959999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9610bf42e48faa93%3A0x205ebc786470b636!2sVilla+la+Angostura%2C+Neuqu%C3%A9n!5e0!3m2!1ses-419!2sar!4v1425058155802"
