adicionando outros servicos

--- a/css/style.scss
+++ b/css/style.scss
@@ -162,6 +162,7 @@ body {
 						display: inline-block;
 						font-size: 9px;
 						padding: 5px 10px;
+						margin: 2px;
 						background: #926FB5;
 						color: white;
 						border-radius: 5px;
