--- a/css/style.scss
+++ b/css/style.scss
@@ -110,8 +110,8 @@ body {
 
 	.detail {
 		padding-top: 75px;
+		padding-bottom: 50px;
 		background: #EDF0F1;
-		height: 100%;
 		.topo {
 			background: #00B7CE;
 			border-bottom: 5px solid #03A1B5;
@@ -158,7 +158,7 @@ body {
 				ul {
 					list-style: none;
 					padding: 0;
-					li {
+					li.service {
 						display: inline-block;
 						font-size: 9px;
 						padding: 5px 10px;
@@ -172,6 +172,16 @@ body {
 						}
 						a {
 							color: #FFF;
+						}
+						
+						&.others {
+							background: #E4E4E4;
+							a {
+								color: #797979;
+							}
+							&:hover {
+								background: darken(#E4E4E4, 10%);
+							}
 						}
 					}
 				}
