--- a/template/homeView.html
+++ b/template/homeView.html
@@ -8,4 +8,7 @@
       Buscar
     </button>
   </form>
+  <div class="footer">
+    <p><strong>MeuSUS</strong> © Copyright 2017. Todos os direitos reservados.</p>
+  </div>
 </div>
