--- a/css/style.scss
+++ b/css/style.scss
@@ -3,7 +3,6 @@
 
 html, body {
 	height: 100%;
-  font-size: 100%;
 }
 
 a {
@@ -15,32 +14,99 @@ body {
 	padding: 0;
 	font-family: 'Open Sans', sans-serif;
 	transition: all ease .2s;
+	.detail {
+		padding-top: 75px;
+		padding-bottom: 50px;
+		background: #EDF0F1;
+		.topo {
+			background: #00B7CE;
+			border-bottom: 5px solid #03A1B5;
+			text-align: center;
+			position: fixed;
+			width: 100%;
+			top: 0;
+			.logo {
+				width: 40px;
+				height: 40px;
+				margin: 0 15px;
+				vertical-align: middle;
+				display: inline-block;
+				background-image: url('../img/logo.png');
+				background-size: cover;
+			}
+			.search-bar {
+				padding: 10px 0;
+				display: inline-block;
+			}
+		}
+		.info {
+			width: 760px;
+			margin: 0 auto;
+			padding: 20px;
+			background: #FFF;
+			border-bottom: 2px solid #E4E4E4;
+			border-radius: 5px;
+			color: #969696;
+			h3, p {
+				margin: 0;
+			}
+			h3 {
+				margin-bottom: 15px;
+				font-size: 16px;
+			}
+			p {
+				font-size: 12px;
+			}
+			.services {
+				h4 {
+					font-size: 14px;
+				}
+				ul {
+					list-style: none;
+					padding: 0;
+					li.service {
+						display: inline-block;
+						font-size: 9px;
+						padding: 5px 10px;
+						margin: 2px;
+						background: #926FB5;
+						color: white;
+						border-radius: 5px;
+						transition: all ease .3s;
+						&:hover {
+							background: darken(#926FB5, 10%);
+						}
+						a {
+							color: #FFF;
+						}
+						
+						&.others {
+							background: #E4E4E4;
+							a {
+								color: #797979;
+							}
+							&:hover {
+								background: darken(#E4E4E4, 10%);
+							}
+						}
+					}
+				}
+			}
+		}
+	}
 }
+
 .ms-input.search {
 	background: rgba(255,255,255,0.90);
 	outline: none;
 	padding: 12px 10px 12px;
 	width: 300px;
-  height: 35px;
-  padding: 10px;
-	font-weight: bold;
-  background: rgba(255,255,255, .90);
-  border: none;
-  border-radius: 5px;
+	border-radius: 5px;
 	box-shadow: none;
-  box-sizing: border-box;
 	color: #888888;
 	border: none;
 	font-weight: bold;
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
-
-  @media (max-width: 420px) {
-    width: 220px;
-  }
-
-  &:focus {
-    outline: 0;
-  }
 }
 .ms-btn {
 	background: #11828e;
