--- a/css/style.scss
+++ b/css/style.scss
@@ -96,6 +96,10 @@ body {
 	}
 }
 
+.hide {
+	display: none;
+}
+
 .ms-input.search {
 	background: rgba(255,255,255,0.90);
 	outline: none;
@@ -126,3 +130,48 @@ body {
 		background: #006873;
 	}
 }
+
+$bg: #1c2e40;
+$bg-light: #00bcd1;
+$fg: #43dff1;
+
+.loader {
+	background: rgba(255, 255, 255, 0.7);
+	width: 100vw;
+	height: 100vh;
+	position: fixed;
+	top: 0;
+	left: 0;
+	.loading {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translateY(-50%);
+		height: 25px;
+		width: 10px;
+		border-radius: 10%;
+		background: $bg-light;
+		border-top-color: $fg;
+		animation: fade2 1s infinite;
+		transition: background .2s;
+		&:after, &:before {
+			content: '';
+			position: absolute;
+			display: block;
+			height: 20px;
+			width: 10px;
+			background: $bg-light;
+			top: 50%;
+			transform: translateY(-50%);
+			left: -15px;
+			border-radius: 10%;
+			animation: fade1 1s infinite;
+			transition: background .2s;
+		}
+		&:before { left: 15px; animation: fade3 1s infinite; }
+	}
+}
+
+@keyframes fade1 {	0% { background: $fg; } }
+@keyframes fade2 {	33% { background: $fg; } }
+@keyframes fade3 {	66% { background: $fg; } }
