--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,5 @@
-<p>
-  home works!
-</p>
+<div class="home-wrapper">
+    <h1>Busque por serviços e unidades disponibilizados pelo SUS</h1>
+    <h2>Ex.: Fisioterapia, exame sangue</h2>
+    <div app-search-input></div>
+</div>
