--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,71 @@
 <div class="home-wrapper">
-    <h1>Busque por serviços e unidades disponibilizados pelo SUS</h1>
-    <h2>Ex.: Fisioterapia, exame sangue</h2>
+    <div class="header">
+        <div class="brand">
+            <svg version="1.1" id="Camada_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                viewBox="0 0 640 480" style="enable-background:new 0 0 640 480;" xml:space="preserve">
+                <style type="text/css">
+                    .st0{fill:#3A3A3A;}
+                </style>
+                <g>
+                    <g>
+                        <path class="st0" d="M393.9,224.8c-1.5-1.3-33.1-1.9-35-1.7c-2,0.2-3.6,1.1-5,2.6c-1.3,1.5-1.9,3.3-1.7,5.3
+                            c2.7,25.2,3.8,53.7,3.4,85.6c-0.6,31.9-2.6,60.5-5.9,85.7c-2.2,17.1-3.7,27.2-4.3,30.5c-1.5,6-3.1,10.6-4.8,13.9
+                            c-1.6,2.9-3.2,4.6-4.6,5.1h-1.9c-1.8,0-3.7-0.1-5.6-0.3c-4.2-0.2-7.4-0.5-9.6-0.9c-13.6-1.9-23.4-7.1-29.5-15.5
+                            c-7.9-10.5-12.2-32.5-12.8-66c-0.4-17.7,0.6-42.2,3-73.4c0.6-8.6,0.6-19.7,0-33.3c-0.7-17.7-1.1-28.5-1.1-32.4
+                            c0-1.9-0.7-3.6-2.1-5c-1.4-1.4-3.1-2.1-5-2.1c-2,0-3.7,0.7-5.1,2.1c-1.4,1.4-2.2,3.1-2.2,5c0,4.1,0.4,15,1.1,32.7
+                            c0.6,12.7,0.6,23.3,0,31.7c-2.5,31.7-3.5,56.7-3,75c0.9,36.4,6,61.1,15.4,74.1c8.5,11.7,21.7,18.8,39.4,21.3l10.6,0.9
+                            c2.3,0.2,4.5,0.3,6.6,0.3c2.6,0,4.5-0.2,5.8-0.6c5.6-1.5,39.9-5.4,43.3-11.8c2.5-4.5,4.4-10.4,5.9-17.5c1.2-4.1,2.8-14.7,5-31.7
+                            c3.3-25.6,5.2-54.7,5.8-87.2c0.5-32.6-0.5-61.7-3.2-87.4C396.2,227.8,395.4,226.2,393.9,224.8z M535.5,375.9
+                            c-0.4-9.5-1.7-17.3-3.8-23.5c-3.1-8.8-41.7-14.9-47.6-18.2c-5.2-2.8-12.3-4.7-21.3-5.5c-0.7-0.2-4.2-0.5-10.3-0.9
+                            c-3.7-0.4-6.7-0.7-8.8-0.9c-5.2-1.1-9.1-2.8-11.5-5.2c-3.1-3.1-4.8-8.2-5-15.5c-0.6-21.4-0.9-33.8-0.6-37.3
+                            c0.6-14.2,3.5-24.9,8.7-32.1c1.9-2.7,5-4.7,9.3-5.9c4.3-1.2,9-1.4,14.3-0.5c5.2,0.9,9.7,2.6,13.5,5.2c3.7,2.6,6.1,5.5,7.2,8.8
+                            c1.7,5.6,2.2,13.2,1.6,22.9l-1.3,12.9c-0.4,6-0.6,10.4-0.6,13.3c-0.2,2.1,0.4,3.9,1.8,5.3c1.4,1.4,3.2,2.2,5.2,2.3
+                            c2,0.1,37.9-0.6,39.3-2c1.4-1.4,2.2-3.1,2.2-5c0.2-3.1,0.6-7.6,1.3-13.6l1-12.3c0.7-11.6-0.1-21.1-2.6-28.4
+                            c-1.9-6.3-5.9-11.5-11.9-15.6c-6-4.1-46.8-6.8-54.1-8.1c-7.4-1.3-14.6-0.9-21.6,1c-7,1.9-12.5,5.7-16.4,11.3
+                            c-6.8,9.5-10.7,22.6-11.5,39.5c-0.2,4.1,0.1,17.1,1,38.8c0.2,10.7,3.2,19.1,9,24.9c4.3,4.7,10.7,7.8,19.2,9.3
+                            c2.7,0.4,6.1,0.7,10.3,0.9c6.1,0.6,9.3,0.9,9.8,0.9c7.1,0.8,12.3,2.3,15.9,4.3c2.6,1.3,4.7,4.5,6.5,9.6c1.8,5.2,2.9,11.8,3.3,20.1
+                            c0.9,12.7,0.2,26.1-1.9,40.1c-1.4,8.2-2.7,13.4-4,15.5c-1.5,3.1-4.5,6.2-9.1,9.5c-4.6,3.3-9.7,5.7-15.4,7.4
+                            c-12.3,3.9-20.6,2.8-25-3.2c-3.1-4.1-4.9-10.7-5.3-19.7v-12.6c0.2-6.9,0.3-10.9,0.3-12c0-2-0.7-3.7-2.1-5.1
+                            c-1.4-1.4-3.1-2.1-5-2.1c-2,0-3.7,0.7-5.1,2.1c-1.4,1.4-2.2,3.1-2.2,5.1c0,0.8-0.1,4.7-0.3,11.7c-0.2,5.8-0.2,10.3,0,13.6
+                            c0.4,12,3,21.2,7.9,27.5c3.1,4.3,7.2,7.3,12.2,9c5,1.7,9.9,2.4,14.7,2.2c4.6-0.2,9.3-1.1,14.1-2.5c7.1-2.1,47.8-5.3,54.1-9.6
+                            c6.1-4.3,10.6-8.9,13.5-13.9c2-3.9,3.8-10.8,5.3-20.8C535.6,403.8,536.4,389.5,535.5,375.9z M246.1,352.3
+                            c-3.1-8.8-41.7-14.9-47.6-18.2c-5.2-2.8-12.3-4.7-21.3-5.5c-0.7-0.2-4.2-0.5-10.3-0.9c-3.7-0.4-6.7-0.7-8.8-0.9
+                            c-5.2-1.1-9.1-2.8-11.5-5.2c-3.1-3.1-4.8-8.2-5-15.5c-0.6-21.4-0.9-33.8-0.6-37.3c0.6-14.2,3.5-24.9,8.7-32.1
+                            c1.9-2.7,5-4.7,9.3-5.9c4.3-1.2,9-1.4,14.3-0.5c5.2,0.9,9.7,2.6,13.5,5.2c3.7,2.6,6.1,5.5,7.2,8.8c1.7,5.6,2.2,13.2,1.6,22.9
+                            l-1.3,12.9c-0.4,6-0.6,10.4-0.6,13.3c-0.2,2.1,0.4,3.9,1.8,5.3c1.4,1.4,3.2,2.2,5.2,2.3c2,0.1,37.9-0.6,39.3-2
+                            c1.4-1.4,2.2-3.1,2.2-5c0.2-3.1,0.6-7.6,1.3-13.6l1-12.3c0.7-11.6-0.1-21.1-2.6-28.4c-1.9-6.3-5.9-11.5-11.9-15.6
+                            c-6-4.1-46.8-6.8-54.1-8.1c-7.4-1.3-14.6-0.9-21.6,1c-7,1.9-12.5,5.7-16.4,11.3c-6.8,9.5-10.7,22.6-11.5,39.5
+                            c-0.2,4.1,0.1,17.1,1,38.8c0.2,10.7,3.2,19.1,9,24.9c4.3,4.7,10.7,7.8,19.2,9.3c2.7,0.4,6.1,0.7,10.3,0.9c6.1,0.6,9.3,0.9,9.8,0.9
+                            c7.1,0.8,12.3,2.3,15.9,4.3c2.6,1.3,4.7,4.5,6.5,9.6c1.8,5.2,2.9,11.8,3.3,20.1c0.9,12.7,0.2,26.1-1.9,40.1
+                            c-1.4,8.2-2.7,13.4-4,15.5c-1.5,3.1-4.5,6.2-9.1,9.5c-4.6,3.3-9.7,5.7-15.4,7.4c-12.3,3.9-20.6,2.8-25-3.2
+                            c-3.1-4.1-4.9-10.7-5.3-19.7v-12.6c0.2-6.9,0.3-10.9,0.3-12c0-2-0.7-3.7-2.1-5.1c-1.4-1.4-3.1-2.1-5-2.1c-2,0-3.7,0.7-5.1,2.1
+                            c-1.4,1.4-2.2,3.1-2.2,5.1c0,0.8-0.1,4.7-0.3,11.7c-0.2,5.8-0.2,10.3,0,13.6c0.4,12,3,21.2,7.9,27.5c3.1,4.3,7.2,7.3,12.2,9
+                            c5,1.7,9.9,2.4,14.7,2.2c4.6-0.2,9.3-1.1,14.1-2.5c7.1-2.1,47.8-5.3,54.1-9.6c6.1-4.3,10.6-8.9,13.5-13.9c2-3.9,3.8-10.8,5.3-20.8
+                            c2.3-15.1,3.1-29.4,2.2-42.9C249.5,366.4,248.2,358.6,246.1,352.3z M143.7,47.3l-15.6,150.7c-1,11.3,32.2,8.5,41.5-0.5
+                            c13-42.6,31.4-101.3,49.9-146.5c-3,41.9-13,124.9-15.6,144.7c-1.3,9.8,25.2,12,40.7,5.3c13.8-35.1,28.9-77.2,43.7-108.1
+                            c-12.5,75.2-9.3,113.6,20.1,113.6c10.6,0,25.9-7.3,35.8-17.1c6.3,16,19.2,23.9,33.2,23.9c16.3,0,36.3-14.7,45.9-29.1
+                            c3.2,13.8,10.5,22.4,22.7,22.4c9.3,0,16.8-9.3,22.1-27.8c1.3,16.3,15.7,27.8,28.5,27.8c14.8,0,26.6-13.5,31.1-29.1
+                            c1.3-4.5-5-6.3-8.8-3.5c-7,17.1-13,20.6-18.3,20.6c-9.3,0-8.5-34.4,1.5-75.5c2.3-9.3-19.8-8.8-32.3,0.5
+                            c-4.8,52.4-13.5,70.7-20.1,70.7c-10,0-12.3-33.9,1.8-78.5c2.3-6.8,3-12.3-20.6-6.3c-6.7,22.7-10.2,44.9-9.6,62.6
+                            c-0.6,0.2-1.2,0.5-1.9,0.9c-6.5,19.3-17.6,34.1-29.1,34.1c-8,0-14.8-5.8-18.1-17.3c18.3-14.8,36.4-38.4,36.4-65.5
+                            c0-12.8-14-23.1-28.8-23.1c-12,0-39.6,12-39.6,69.2c0,4.6,0.4,8.9,1.1,12.8c-6,12.5-11.3,15.3-16,15.3
+                            c-17.6,0-11.3-66.7,0.3-112.9c-7.3-16-32.5-28.1-37.8-20.1c-5.5,8-26.1,57.2-38.4,99.1l17.3-134.9c-11-11-44.5-15.8-48-7.8
+                            c-15.6,35.9-30.1,86-44.9,134.2c5-41.9,10.5-79.7,15.3-111.8c1.8-11.8-7.3-16.3-14.8-16.1l-62.7,1.5c-7,6-7.8,17.3,0.3,16.1
+                            l22.7-5C142.2,35.8,144.7,38.3,143.7,47.3z M386.4,109.8c2.8,0,4,2.5,4,8c0,24.3-9.3,43.9-20.1,56.7c-0.3-2-0.3-4.3-0.3-6.8
+                            C370.1,126.6,381.9,109.8,386.4,109.8z"/>
+                    </g>
+                </g>
+            </svg>
+        </div>
+        <div class="navbar">
+            <ul>
+                <li><a href="javascript:;">Sobre o MeuSUS</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="bg-bottom"></div>
+    <!-- <h1>Busque por serviços e unidades disponibilizados pelo SUS</h1> -->
+    <h1>Loren Ipsum</h1>
+    <h2>Tente por exemplo: <strong>fisioterapia, exame de sangue, mamografia</strong></h2>
     <div app-search-input></div>
 </div>
