--- a/src/app/shared/search-input/search-input.component.html
+++ b/src/app/shared/search-input/search-input.component.html
@@ -1,4 +1,4 @@
 <div class="search-input">
-  <input type="text" placeholder="O que vc está procurando?">
+  <input type="text" placeholder="Digite um serviço ou unidade">
   <input type="button" class="btn btn-primary" value="Buscar">
 </div>
