--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,5 +1,24 @@
+@import 'variables';
 @import 'components/btns';
 
+
+@import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700');
+// @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,800');
+/* @import url('https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800'); */
+
 body {
-	background: black;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	margin: 0;
+	padding: 0;
+	p, a, h1, h2, h3, h4, h5, h6, input[type="text"] {
+		font-family: 'PT Sans', sans-serif;
+		/* font-family: 'Poppins', sans-serif; */
+		/* font-family: 'Nunito', sans-serif; */
+	}
+}
+::selection {
+	background: $color_primary;
+	color: #FFF;
 }
