--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -6,6 +6,7 @@
 	width: 100%;
 	height: 100%;
 	padding: 0 20px;
+	text-align: center;
 	// background-image: url(/assets/images/bg.png);
 	background-size: contain;
 	color: #4d5252;
@@ -13,8 +14,10 @@
 	align-items: center;
 	box-sizing: border-box;
 	flex-direction: column;
+	transition: all .2s ease;
 	.header {
-		width: 240px;
+		width: 80%;
+		max-width: 960px;
 		display: flex;
 		align-items: stretch;
 		position: absolute;
@@ -45,13 +48,13 @@
 		}
 	}
 	.bg-bottom {
-		@include min-tablet-size {
+		@media (min-height: 600px) {
 			background-image: url(/assets/images/bg-home.png);
 			width: 100%;
-			height: 45%;
+			height: 25%;
 			background-size: contain;
 			background-position-x: center;
-			background-position-y: 13px;
+			background-position-y: 5px;
 			background-repeat: no-repeat;
 			position: absolute;
 			bottom: 0;
@@ -61,15 +64,15 @@
 	}
 	h1 {
 		margin-bottom: 5px;
+		font-size: 17px;
 	}
 	h2 {
 		font-weight: 100;
-		font-size: 14px;
+		font-size: 12px;
 		letter-spacing: 0.06em;
 		margin-top: 5px;
 		margin-bottom: 15px;
 		color: #a7a7a7;
-		text-align: center;
 		strong {
 			display: block;
 			color: #848484;
