--- a/src/app/shared/search-input/search-input.component.html
+++ b/src/app/shared/search-input/search-input.component.html
@@ -1,4 +1,5 @@
 <div class="search-input">
   <input type="text" placeholder="Digite um serviço ou unidade">
+  <p>Buscar em: <a href="javascript:;">Salvador</a></p>
   <input type="button" class="btn btn-primary" value="Buscar">
 </div>
