--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home-wrapper">
     <div class="header">
         <div class="brand">
-            <svg version="1.1" id="Camada_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <!-- <svg version="1.1" id="Camada_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                 viewBox="0 0 640 480" style="enable-background:new 0 0 640 480;" xml:space="preserve">
                 <style type="text/css">
                     .st0{fill:#3A3A3A;}
@@ -55,7 +55,7 @@
                             C370.1,126.6,381.9,109.8,386.4,109.8z"/>
                     </g>
                 </g>
-            </svg>
+            </svg> -->
         </div>
         <div class="navbar">
             <ul>
