--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -6,6 +6,10 @@
 // @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,800');
 /* @import url('https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800'); */
 
+* {
+	box-sizing: border-box;
+}
+
 body {
 	width: 100%;
 	height: 100%;
