--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,14 @@
 <div class="home-wrapper">
     <div class="header">
+        <div class="navbar">
+            <ul>
+                <li><a href="javascript:;">Sobre o MeuSUS</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="content">
         <div class="brand">
-            <!-- <svg version="1.1" id="Camada_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <svg version="1.1" id="Camada_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                 viewBox="0 0 640 480" style="enable-background:new 0 0 640 480;" xml:space="preserve">
                 <style type="text/css">
                     .st0{fill:#3A3A3A;}
@@ -55,17 +62,10 @@
                             C370.1,126.6,381.9,109.8,386.4,109.8z"/>
                     </g>
                 </g>
-            </svg> -->
+            </svg>
         </div>
-        <div class="navbar">
-            <ul>
-                <li><a href="javascript:;">Sobre o MeuSUS</a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="content">
-        <h1>Busque por serviços e unidades disponibilizados pelo SUS</h1>
-        <!-- <h1>Loren Ipsum</h1> -->
+        <!-- <h1>Busque por serviços e unidades disponibilizados pelo SUS</h1> -->
+        <h1>Loren Ipsum</h1>
         <h2>Tente por exemplo: <strong>fisioterapia, exame de sangue, mamografia</strong></h2>
         <div app-search-input></div>
     </div>
