--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -25,10 +25,6 @@
 		position: absolute;
 		top: 0;
 		padding: 30px 0;
-		.brand {
-			width: 80px;
-			vertical-align: middle;
-		}
 		.navbar {
 			width: 100%;
 			ul {
@@ -56,6 +52,15 @@
 		@include min-desktop-size {
 			max-width: 800px;
 			width: 100%;
+			margin-top: -15%;
+		}
+		.brand {
+			width: 80px;
+			margin: 0 auto;
+			text-align: center;
+			svg path {
+				fill: $color_primary;
+			}
 		}
 		h1 {
 			margin-bottom: 5px;
@@ -96,18 +101,22 @@
 		}
 	}
 	.bg-bottom {
-		@media (min-height: 600px) {
-			background-image: url(/assets/images/bg-home.png);
-			width: 100%;
-			height: 25%;
-			background-size: contain;
-			background-position-x: center;
+		background-image: url(/assets/images/bg-home.png);
+		background-size: contain;
+		background-position-x: center;
+		background-repeat: no-repeat;
+		position: absolute;
+		bottom: 0;
+		width: 100%;
+		z-index: -1;
+		opacity: .8;
+		@media (min-height: 600px) {	
 			background-position-y: 5px;
-			background-repeat: no-repeat;
-			position: absolute;
-			bottom: 0;
-			z-index: -1;
-			opacity: .8;
+			height: 25%;
+		}
+		@include min-desktop-size {
+			background-position-y: 10px;
+			height: 40%;
 		}
 	}
 }
