ajustes na tela de consulta

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -95,7 +95,7 @@
 				}
 			}
 		}
-		.search-input input[type="text"] {
+		.search-form .input-term {
 			max-width: 300px;
 			margin: 0 auto;
 		}
