--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -64,8 +64,8 @@
                 </g>
             </svg>
         </div>
-        <!-- <h1>Busque por serviços e unidades disponibilizados pelo SUS</h1> -->
-        <h1>Loren Ipsum</h1>
+        <h1>Busque por serviços e unidades disponibilizados pelo SUS</h1>
+        <!-- <h1>Loren Ipsum</h1> -->
         <h2>Tente por exemplo: <strong>fisioterapia, exame de sangue, mamografia</strong></h2>
         <div app-search-input></div>
     </div>
