--- a/src/app/shared/search-input/search-input.component.scss
+++ b/src/app/shared/search-input/search-input.component.scss
@@ -1,12 +1,12 @@
 @import '../../../assets/styles/variables';
 @import '../../../assets/styles/mixins/helpers';
 
-.search-input	{
+.search-form	{
 	font-size: 14px;
 	input {
 		display: block;
 	}
-	input[type="text"] {
+	.input-term {
 		color: $color_primary;
 		width: 100%;
 		min-width: 200px;
@@ -28,13 +28,30 @@
 	}
 	p {
 		font-size: 12px;
+		margin: 20px 0;
 		a {
+			letter-spacing: -0.03em;
+			font-weight: 800;
+			margin-left: 5px;
+			cursor: pointer;
+		}
+		> .input-location {
+			text-align: center;
+			outline: 0;
+			display: inline-block;
+			min-width: 250px;
 			font-weight: 800;
 			color: #48b9ce;
 			text-decoration: none;
 			margin-left: 5px;
+			border: none;
 			border-bottom: 1px solid;
 			padding: 0 15px 2px;
+			&:disabled {
+				border: none;
+				background: transparent;
+				width: 300px;
+			}
 		}
 	}
 	.btn {
@@ -42,5 +59,38 @@
 		margin: 20px auto;
 		padding: 10px 40px;
 		font-weight: 100;
+	}
+}
+
+.overflow {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.6);
+	top: 0;
+	left: 0;
+}
+
+.location-form {
+	position: fixed;
+	top: 20%;
+	left: 0;
+	right: 0;
+	width: 450px;
+	margin: 0 auto;
+	background: white;
+	border-radius: 5px;
+	padding: 30px 5px;
+	.location-items {
+		width: 350px;
+    margin: 0 auto;
+    border: 1px solid #dedede;
+    border-radius: 5px;
+		padding: 5px 20px;
+		.location-item {
+			display: block;
+			padding: 10px 5px;
+			border-bottom: 1px dashed #dedede;
+		}
 	}
 }
