--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -16,7 +16,7 @@ body {
 	position: absolute;
 	margin: 0;
 	padding: 0;
-	p, a, h1, h2, h3, h4, h5, h6, input[type="text"] {
+	p, a, h1, h2, h3, h4, h5, h6, input[type="text"], span {
 		font-family: 'PT Sans', sans-serif;
 		/* font-family: 'Poppins', sans-serif; */
 		/* font-family: 'Nunito', sans-serif; */
