--- a/src/app/shared/search-input/search-input.component.scss
+++ b/src/app/shared/search-input/search-input.component.scss
@@ -3,6 +3,17 @@
 
 .search-form	{
 	font-size: 14px;
+	.search-form__input {
+		.required-field {
+			background: #ffa3b8;
+			margin-top: 10px;
+			padding: 10px 30px;
+			display: inline-block;
+			border-radius: 10px;
+			color: #ffffff;
+			font-size: 13px;
+		}
+	}
 	input {
 		display: block;
 	}
