alterações na home

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -66,9 +66,12 @@
         </div>
         <h1>Busque por serviços e unidades disponibilizados pelo SUS</h1>
         <!-- <h1>Loren Ipsum</h1> -->
-        <h2>Tente por exemplo: <strong><a href="javascript:;">fisioterapia</a>, <a href="javascript:;">exame de sangue</a>, <a href="javascript:;">mamografia</a></strong></h2>
+        <h2>Tente por exemplo: <strong><a href="javascript:;" [routerLink]="['/fisioterapia']">fisioterapia</a>, <a href="javascript:;" [routerLink]="['/exame-de-sangue']">exame de sangue</a>, <a href="javascript:;" [routerLink]="['/mamografia']">mamografia</a></strong></h2>
         <div app-search-input></div>
-        <p>termos mais consultadas</p>
+
+
+        
+        <!-- <p>termos mais consultadas</p> -->
     </div>
     <div class="bg-bottom"></div>
 </div>
