--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,5 +1,5 @@
 @import 'variables';
-@import 'components/btns';
+@import 'components/button';
 
 
 @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700');
