--- a/src/app/shared/search-input/search-input.component.html
+++ b/src/app/shared/search-input/search-input.component.html
@@ -1,15 +1,17 @@
 <div class="search-form">
   <div class="search-form__input">
-    <input type="text" class="input-term" name="term" [(ngModel)]="searchTerm" placeholder="Digite um serviço ou unidade" (keyup.enter)="search()">
+    <input type="text" class="input input-term" name="term" [(ngModel)]="searchTerm" placeholder="Digite um serviço ou unidade" (keyup.enter)="search()">
     <span class="required-field" *ngIf="showRequiredField">Você precisa digitar algo para iniciar a consulta</span>
   </div>
-  <p>Buscar em: <a (click)="showInputLocation = true" *ngIf="!showInputLocation">{{location}} <i class="fa fa-caret-down"></i></a></p>
-  <input type="submit" class="btn btn-primary" (click)="search()" value="Buscar">
+  <p class="search-form__location">Buscar em: 
+    <a (click)="showInputLocation = true" *ngIf="!showInputLocation">{{location}} <i class="fa fa-caret-down"></i></a>
+  </p>
+  <input type="submit" class="button button_primary" (click)="search()" value="Buscar">
 </div>
 
 <div class="overflow" *ngIf="showInputLocation" (click)="showInputLocation = false"></div>
 <div class="location-form" *ngIf="showInputLocation" >
-  <input type="text" class="input-location" [(ngModel)]="location" (keyup.enter)="changeLocation()">
+  <input type="text" class="input input-location" [(ngModel)]="location" (keyup.enter)="changeLocation()">
   <div class="location-items" *ngIf="availableCities.length > 0">
     <a class="location-item" *ngFor="let city of availableCities" (click)="showInputLocation = false">{{city}}</a>
   </div>
