--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,6 +1,11 @@
 // Responsive
-$min_desktop_size: 991px;
-$min_tablet_size: 426px;
-$max_mobile_size: 992px;
+$min_desktop_size: 769px;
+$min_desktop_medium_size: 1024px;
+$min_desktop_large_size: 1440px;
+$min-desktop-height: 840px;
+
+$max_tablet_size: 768px;
+$min_tablet_size: 427px;
+$max_mobile_size: 426px;
 
 $color_primary: #00b8ce;
