--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="page home-page">
     <div class="header">
-        <div class="navbar">
-            <ul>
-                <li><a class="" href="javascript:;">Sobre o MeuSUS</a></li>
-            </ul>
-        </div>
+        <ul class="navbar">
+            <li class="navbar__item">
+                <a class="navbar__link" href="javascript:;">Sobre o MeuSUS</a>
+            </li>
+        </ul>
     </div>
     <div class="page__content">
         <div class="brand">
