--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -68,9 +68,9 @@
         <!-- <h1>Loren Ipsum</h1> -->
         <h2 class="search-hint">Tente por exemplo: 
             <div class="search-hint__item">
-                <a class="search-hint__link" href="javascript:;">fisioterapia</a>, 
-                <a class="search-hint__link" href="javascript:;">exame de sangue</a>, 
-                <a class="search-hint__link" href="javascript:;">mamografia</a>
+                <a routerLink="{{hint.url}}"
+                   class="search-hint__link" 
+                   *ngFor="let hint of hints">{{ hint.name }}</a> 
             </div>
         </h2>
         <div app-search-input></div>
@@ -79,5 +79,5 @@
         
         <!-- <p>termos mais consultadas</p> -->
     </div>
-    <div class="bg-bottom"></div>
+    <div class="page__bottom-bg"></div>
 </div>
