--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -92,21 +92,37 @@
 .search-hint {
 	font-weight: 100;
 	font-size: 12px;
-	letter-spacing: 0.06em;
 	margin-top: 5px;
 	margin-bottom: 15px;
 	color: #a7a7a7;
-	@include min-tablet-size {
-		font-size: 14px;
-	}
 	@include min-desktop-size {
-		font-size: 16px;
+		font-size: 13px;
 	}
-	.search-hint__item {
-		display: block;
-		color: #848484;
-		@include min-desktop-size {
-			display: inline-block;
+}
+.search-hint__item {
+	display: block;
+	color: #848484;
+	padding-top: 10px;
+}
+.search-hint__link {
+	text-decoration: none;
+	color: #00B8CE;
+	text-transform: capitalize;
+	font-weight: bold;
+	font-size: 14px;
+	&::after {
+		content: ', ';
+	}
+	&:last-child::after {
+		display: none;
+	}
+	&:hover {
+		background: #00b8ce;
+		color: #FFF;
+		padding: 5px 20px;
+		border-radius: 10px;
+		&::after {
+			display: none;
 		}
 	}
 }
@@ -116,7 +132,7 @@
 	margin: 0 auto;
 }
 
-.bg-bottom {
+.page__bottom-bg {
 	background-image: url(/assets/images/bg-home.png);
 	background-size: contain;
 	background-position-x: center;
